--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@
     align-items: flex-start;
     gap: 40px;
     margin-top: 100px;
-    height: 250px;
+    flex-wrap: wrap;
   }
   
   .mid-text {
@@ -94,7 +94,143 @@
     align-self: flex-start;
 }
 
+#button:hover {
+  background-color: red;
+}
+
 .mid-text h1, .mid-text p {
   margin: 0;
   line-height: 1.2;
+}
+
+.middle-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 60px 0px;
+}
+
+.middle-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.boxes {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.box img {
+  display: flex;
+  border: 3px solid #3882F6;
+  width: 150px;
+  height: 150px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 150px;
+  margin: 10px 20px;
+  justify-content: space-evenly;
+}
+
+.quote-section {
+  display: flex;
+  flex-direction: column;
+  padding: 70px;
+  background-color: #e5e7eb;
+  margin-top: 80px;
+  align-items: center;
+  justify-content: center;
+}
+
+.quote {
+  font-size: 26px;
+  font-style: italic;
+  color: #1F2937;
+  font-weight: normal;
+  max-width: 740px;
+  text-align: left;
+  margin: 0 auto;
+}
+
+.quote-sign {
+  max-width: 740px;
+  width: 100%;  
+  text-align: right;  
+  margin: 30px auto 0; 
+  font-size: 20px;
+  color: #1F2937;
+}
+
+.quote-container {
+  max-width: 1200px;
+  width: 100%;
+}
+
+
+.call-section {
+  display: flex;
+  background-color: white;
+  padding: 100px;
+  justify-content: center;
+  align-items: center;
+}
+
+.call-container {
+  display: flex;
+  background-color: #3882F6;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 1000px;
+  height: 150px;
+  border-radius: 10px;
+  font-size: 15px;
+  
+}
+
+.call-header {
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+
+.call-button button {
+  display: flex;
+  color: #e5e7eb;
+  background-color: #3882F6;
+  border-color: white;
+  border-style: solid;
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 10px 30px;
+  align-self: flex-start;
+}
+
+.call-button button:hover {
+  background-color: white;
+  color: #1F2937;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1F2937;
+  color: white;
+  height: 40px;
+  font-size: 15px;
+
 }
